--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Iuliia and I'm a iOS Developer. 
 
-  I am most skilled in: <mark>hjh</mark> and <mark>hjhj</mark>
+  I’m passionate and hardworking, and eager to solve each problem that comes my way. I learn quickly and have a productive attitude.
 
 # Projects Section
 # projects_title: Projects
@@ -44,7 +44,7 @@ more_content: | # this will include new lines to allow paragraphs
    - surfing
    - rolling
    - hiking
-   - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+   
 
 # Footer
 footer_show_references: true
