--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,10 +1,10 @@
 - layout: left
-  name: Harvard University
-  dates: 2010 - 2013
-  qualification: BSc Computer Science
+  name: Apple Developer Academy
+  dates: 2019 - 2020
+  qualification: iOS Developer/ UX/UI designer
   quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
+    The Apple Developer Academy is a partnership between the University of Napoli Federico II and Apple.
   description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+   At the Apple Developer Academy I learned how to develop an app from scratch using Swift and its frameworks and app services, like SwiftUI, UIKit, Core ML, Create ML, CoreData etc.
 
     I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
