--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,16 @@ email: julia.Lisicina92@gmail.com
 # website: www.github.com/sproogen/resume-theme
 
 # Social links
-twitter_username: facespics
+# twitter_username: facespics
 github_username:  Jf0x
 # dribbble_username: jekyll
-# facebook_username: jekyll
+facebook_username: Jullisss
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
-# pinterest_username: jekyll
-youtube_username: globalmtb
-# googleplus_username: +jekyll
+instagram_username: julia_lisicina
+linkedin_username: julia-lisitcyna-225488195
+# pinterest_username: 
+# youtube_username: 
+# googleplus_username: 
 
 # About Section
 # about_title: About Me
