--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ github_username:  Jf0x
 facebook_username: Jullisss
 # flickr_username: jekyll
 instagram_username: julia_lisicina
-linkedin_username: julia-lisitcyna-225488195
+linkedin_username: https://www.linkedin.com/in/julia-lisitcyna-225488195/
 # pinterest_username: 
 # youtube_username: 
 # googleplus_username: 
@@ -40,7 +40,7 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
-  Alongside my interests in networks and software engineering some of my other interests and hobbies are:
+  Alongside my interests in networks and mobil application engineering some of my other interests and hobbies are:
    - surfing
    - rolling
    - hiking
