--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,4 +1,4 @@
-- layout: left
+- layout: top-middle
   name: Apple Developer Academy
   dates: 2019 - 2020
   qualification: iOS Developer/ UX/UI designer
