--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Iuliia and I'm a iOS Developer. 
 
   I’m passionate and hardworking, and eager to solve each problem that comes my way. I learn quickly and have a productive attitude.
-  
+
 # Education Section
 # educaton_title: Education
 
@@ -39,8 +39,8 @@ more_content: | # this will include new lines to allow paragraphs
    - rolling
    - hiking
    
-# Projects Section
-# projects_title: Projects
+## Projects Section
+## projects_title: Projects
 
 # Experience Section
 # experience_title: Experience
