--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,9 +1,8 @@
-- layout: left
-  name: CLARITY
+- layout: top-middle
+  name: CLARITY.
   #link: github.com/sproogen
   #github: sproogen/resume-theme
-  #quote: >
-   CLARITY - app for fighting emotional eating.
- This is an amazing application that helps people fight emotional eating.
-  #description: | # this will include new lines to allow paragraphs
-   # I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+  quote: >
+    This is the amazing application then help people  fight emotional eating.
+  description: | # this will include new lines to allow paragraphs
+    I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
