--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,8 +1,11 @@
 - layout: top-middle
-  name: CLARITY.
+  name: Clarity.
   #link: github.com/sproogen
   #github: sproogen/resume-theme
   quote: >
     This is the amazing application then help people  fight emotional eating.
   description: | # this will include new lines to allow paragraphs
-    I started this project as a way if learning <mark>React</mark> and it has since grown into a fully fledged app. I have learned many skills through this and been I'm very proud of having this in my portfolio. If you don't have a project as awesome as this I would advise you make one.
+    - I spend a lot of time on research information about emotional and mindful eating(medical research, interviews, medical articles, medical books, communication with people who have this problem).
+- work with SwiftUI.
+- work with Neumorphism style.
+- work with JSON in Swift.
